--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -141,6 +141,15 @@ aside p.Aelec-guide-txt {
   padding-bottom: 50px;
 }
 
+#DateToDate{
+  color: #000;
+  margin-top: 16px;
+  font-family: 'Roboto-bold', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
 /* nav img.user-profile {
   margin-top: 0;
   height: 40px;
