--- a/css/student_css/style_studDash.css
+++ b/css/student_css/style_studDash.css
@@ -171,6 +171,15 @@ aside p.Aelec-guide-txt {
   margin-top: 3em;
 }
 
+#DateToDate{
+  color: #000;
+  margin-top: 16px;
+  font-family: 'Roboto-bold', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
 
 
 
