--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -181,6 +181,9 @@ hr{
 	text-align: center;
 	background: rgba(255, 255, 255, 0.6);
 }
+#Bth_pad{
+	padding: 12px!important;
+}
 table.center {
 	margin-left: auto;
 	margin-right: auto;
