--- a/css/admin_css/style_msgBox.css
+++ b/css/admin_css/style_msgBox.css
@@ -705,8 +705,8 @@
     }
     /*------------messagebox----------*/
     
-    <!--Mesage-box> ::-webkit-scrollbar {
-        width: 5px!important;
+    ::-webkit-scrollbar {
+        width: 8px!important;
         height: 5px!important;
     }
     
