--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -539,3 +539,111 @@
     color: white;
   }
 }
+
+/* iPhone 6 7 8 ----------- */
+@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : portrait){
+  .Belection_container {
+    display: grid;
+    grid-column-gap: 30px;
+    grid-row-gap: 2px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+    grid-template-rows: repeat(5, auto);
+  }
+  .Bcan {
+    background-color:#1f6f8f;
+    font-weight: initial;
+    width: auto;
+    height: 20%;
+    text-align: center;
+    margin-top:2%;
+    font-family: 'Roboto-regular', sans-serif;
+    padding: 1px;
+  }
+  .Bcan b{
+    color: white;
+    font-family: 'Roboto-regular', sans-serif;
+    padding-top: 50px;
+    font-size: 60%;
+  }
+  .Bcan span{
+    background: #0f3849;
+    width: 13%;
+    height: 100%;
+    font-family: 'Roboto-regular', sans-serif;
+    float: right;
+    padding: 4px;
+    color: white;
+  }
+}
+
+/* iPhone 6 7 8 plus----------- */
+@media only screen and (min-device-width: 736px) and (max-device-height: 414px) and (orientation :landscape){
+  .Bcon {
+    max-width: 70%;
+    z-index: 1000;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .Bvcontainer{
+    position: relative;
+    margin-top: 1%;
+    justify-content: space-around;
+    display: grid; 
+    grid-column-gap: 10%;
+    grid-row-gap: -1%;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 2fr));
+  }
+}
+
+/* iPhone X ----------- */
+@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation : portrait){
+  .Belection_container {
+    display: grid;
+    grid-column-gap: 30px;
+    grid-row-gap: 2px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+    grid-template-rows: repeat(5, auto);
+  }
+  .Bcan {
+    background-color:#1f6f8f;
+    font-weight: initial;
+    width: auto;
+    height: 20%;
+    text-align: center;
+    margin-top:2%;
+    font-family: 'Roboto-regular', sans-serif;
+    padding: 1px;
+  }
+  .Bcan b{
+    color: white;
+    font-family: 'Roboto-regular', sans-serif;
+    padding-top: 50px;
+    font-size: 60%;
+  }
+  .Bcan span{
+    background: #0f3849;
+    width: 13%;
+    height: 105%;
+    font-family: 'Roboto-regular', sans-serif;
+    float: right;
+    padding: 4px;
+    color: white;
+  }
+}
+@media only screen and (min-device-width: 812px) and (max-device-height: 375px) and (orientation : landscape){
+  .Bcon {
+    max-width: 90%;
+    z-index: 1000;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .Bvcontainer{
+    position: relative;
+    margin-top: 1%;
+    justify-content: space-around;
+    display: grid; 
+    grid-column-gap: 6%;
+    grid-row-gap: -1%;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 2fr));
+  }
+}
