font style minor fix

--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -209,7 +209,7 @@ th {
 	padding: 10px!important;
 }
 td {
-	font-family: "Roboto-regular", sans-serif;
+	font-family: 'Roboto-regular', sans-serif;
 	font-size: 11pt;
 	border: 1px solid #124254;
 	max-width: 150px;
