--- a/css/style_Login.css
+++ b/css/style_Login.css
@@ -102,11 +102,10 @@ p {
   background-color: #eceff1;
   box-shadow: 0 10px 20px rgba(0, 0, 0, .19);
   text-align: center;
-  right: 10px;
+  right: 20vh;
   position: absolute;
   float: right;
   margin-top: 100px;
-  margin-left: 200px;
 }
 
 .Aselect{
@@ -189,6 +188,7 @@ select {
     position: relative; /* or absolute */
     display: inline-block;
     float: none;
+    right: 0;
     max-width: 100%;
     margin: 25px 10px 0 10px;
   }
@@ -216,13 +216,26 @@ select {
   }
 
   .Awelcome-banner {
-    display: block;
-    float: right;
-    margin: 100px;
+    display: none;
+  }
+  .Alogo-banner {
+    display: inline-block;
+    font-size: 1em;
+    position: relative;
+    text-align: center;
+    top: 50;
+  }
+  .Arlogo {
+    display: inline-block;
+    position: relative;
+    padding: 0px 30px 0px 10px;
+    height: 15%;
+    width: 15%;
   }
   .Acontainer{
     position: relative; /* or absolute */
     display: inline-block;
+    right: 0;
     max-width: 100%;
     top: -150px;
   }
