--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -270,6 +270,12 @@ iframe {
   border-bottom: 2px solid #fece4b;
   padding: 10px 20px;
   margin: 25px 5px 15px 0px!important;
+  box-shadow:
+    inset 0 0 2px 0 rgba(255,255,255,.4),
+    inset 0 0 3px 0 rgba(255, 255, 255, 0.8),
+    inset 0 0 3px 5px rgba(255, 255, 255, 0.07),
+    2px 2px 4px 0 rgba(0,0,0,.25);
+  border-radius: 4px;
 }
 
 .btn-button3:hover,
