--- a/css/style_Login.css
+++ b/css/style_Login.css
@@ -190,14 +190,16 @@ select {
     float: none;
     right: 0;
     max-width: 100%;
-    margin: 25px 10px 0 10px;
+    top: -20px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   .Alogo-banner {
     display: inline-block;
     font-size: 1em;
     position: relative;
     text-align: center;
-    top: 50;
+    top: 50px;
   }
   .Arlogo {
     display: inline-block;
@@ -208,35 +210,66 @@ select {
   }
 }
 
-/* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-  body{
-    -webkit-flex-direction: column;
-    flex-direction: column;
+
+/*iPad (portrait)*/
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 2) 
+  and (orientation: portrait){
+    body{
+      -webkit-flex-direction: column;
+      flex-direction: column;
+    }
+  
+    .Awelcome-banner {
+      display: none;
+    }
+    .Alogo-banner {
+      display: inline-block;
+      font-size: 1em;
+      position: relative;
+      text-align: center;
+      top: 50px;
+    }
+    .Arlogo {
+      display: inline-block;
+      position: relative;
+      padding: 0px 30px 0px 10px;
+      height: 15%;
+      width: 15%;
+    }
+    .Acontainer{
+      position: relative; /* or absolute */
+      display: inline-block;
+      right: 0;
+      max-width: 100%;
+      top: -20px;
+      left: -100px;
+    }
   }
 
-  .Awelcome-banner {
-    display: none;
+  /*iPad Pro (portrait)*/
+  @media only screen 
+  and (min-device-width: 1024px) 
+  and (max-device-width: 1366px) 
+  and (-webkit-min-device-pixel-ratio: 2) 
+  and (orientation: portrait){
+
+    .Awelcome-banner{
+      display: block;
+      margin-left: 20px;
+    }
+
+    .Alogo-banner, .Arlogo{
+      display: none;
+    }
+    .Acontainer{
+      position: relative; /* or absolute */
+      display: inline-block;
+      right: 0;
+      max-width: 100%;
+      top: -20px;
+      left: -250px;
+    }
   }
-  .Alogo-banner {
-    display: inline-block;
-    font-size: 1em;
-    position: relative;
-    text-align: center;
-    top: 50;
-  }
-  .Arlogo {
-    display: inline-block;
-    position: relative;
-    padding: 0px 30px 0px 10px;
-    height: 15%;
-    width: 15%;
-  }
-  .Acontainer{
-    position: relative; /* or absolute */
-    display: inline-block;
-    right: 0;
-    max-width: 100%;
-    top: -150px;
-  }
-}
