fixed actlogs table head and td margin
- added responsive css and js for access logs

bug: access logs table dont overflow outside the div in local, but in host it does

--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -546,7 +546,7 @@ th {
 
 td {
   border: 1px solid #124254;
-  padding: 0.6% !important;
+  padding: 3px !important;
   max-width: 150px;
   height: 40px;
   overflow: hidden;
