--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -16,7 +16,60 @@ body {
   width: auto;
 }
 
+.input-icons i {
+  position: absolute;
+}
+
+/* .input-icons {
+  width: 100%;
+  margin-bottom: 10px;          
+} */
+
+.icon {
+ padding: 9px;
+ min-width: 42px;
+ right: 1.5rem;
+ color: #555555;
+ background-color: #eeeeee;
+ border: 1px solid #ccc;
+ background-color: #eeeeee;
+ border-radius: 4px;
+ border-top-left-radius: 0px;
+ border-bottom-left-radius: 0px;
+ line-height: 1;
+ text-align: center;
+ display: inline-block;
+ cursor: pointer;
+}
+
 @media all and (max-width: 968px) {
+
+  .input-icons i {
+    position: absolute;
+  }
+  
+  .input-icons {
+    width: 100%;
+    margin-bottom: 10px;          
+  }
+  
+  .icon {
+   padding: 9px;
+   min-width: 50px;
+   right: 1.5rem;
+   color: #555555;
+   background-color: #eeeeee;
+   border: 1px solid #ccc;
+   background-color: #eeeeee;
+   border-radius: 4px;
+   border-top-left-radius: 0px;
+   border-bottom-left-radius: 0px;
+   line-height: 1;
+   text-align: center;
+   display: inline-block;
+   cursor: pointer;
+  }
+  
   nav ul {
     margin-right: 0px;
     margin-left: 0px;
@@ -130,6 +183,16 @@ body {
 
 .modal-backdrop {
   z-index: -1!important;
+}
+
+
+/* Important part */
+.modal-dialog{
+  overflow-y: initial !important
+}
+.scroll{
+  height: 80vh;
+  overflow-y: auto;
 }
 
 /* .modal-open {
@@ -317,6 +380,31 @@ iframe {
   div.cropper-container.cropper-bg{
     width:auto !important;
   }
+  .input-icons i {
+    position: absolute;
+  }
+  
+  .input-icons {
+    width: 100%;
+    margin-bottom: 10px;          
+  }
+  
+  .icon {
+   padding: 9px;
+   min-width: 42px;
+   right: 1.5rem;
+   color: #555555;
+   background-color: #eeeeee;
+   border: 1px solid #ccc;
+   background-color: #eeeeee;
+   border-radius: 4px;
+   border-top-left-radius: 0px;
+   border-bottom-left-radius: 0px;
+   line-height: 1;
+   text-align: center;
+   display: inline-block;
+   cursor: pointer;
+  }
   
 }
 
@@ -487,6 +575,22 @@ div.container {
 
 div.container.upload {
   border: none;
+}
+
+#show-list::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+}
+
+#show-list::-webkit-scrollbar {
+  width: 5px;
+  background-color: #F5F5F5;
+}
+
+#show-list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: gray;
 }
 
 @media only screen and (max-width: 768px) {
