--- a/css/student_css/user_Cand.css
+++ b/css/student_css/user_Cand.css
@@ -213,11 +213,14 @@ table.center {
   }
   @media only screen and (device-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) { 
     .Uwrapper{
-      display: none;
+      flex-direction: column;
+    }
+    .Uleft{
+      display: grid; ;
     }
 
   }
-}
+
 /*countdown*/
 
 aside {
