--- a/css/admin_css/style2_actLogs.css
+++ b/css/admin_css/style2_actLogs.css
@@ -373,10 +373,15 @@ img.logos {
 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   body, section, .container {
     -webkit-flex-direction: column;
     flex-direction: column;
+  }
+  div.container {
+    margin: 0px 0px 25px 0px;
+    width: 100%;
+    height: fit-content;
   }
 }
 
